# tamubot

./: .ccstatusline-settings.json  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  scrapy.cfg  skills-lock.json
.claude/skills/: check-syllabus-gaps.md  chunk-syllabi.md  golden-set.md  iterate-pipeline.md  probe-rag.md  research-prompts.md  run-eval.md  scrape-catalog.md  scrape-howdy-portal.md  scrape-simple-syllabus.md  scrape.md  server-ops.md  task-budget.md
_archive/legacy/: README.md
_archive/lightrag/: eval.py  ingest.py  ingest_670.py  ingest_multi.py  inspect_670.py  query.py  test_one_course.py  wrappers.py
_archive/scripts/: analyze_dept_quality.py  analyze_header_distributions.py  (+16 more)
docs/: FUTURE_IDEAS.md  OBSERVABILITY.md
evals/: eval_chunking.py  eval_pipeline.py  eval_retrieval_metrics.py  generate_eval_draft.py  generate_golden_set.py  golden_set.py  import_eval_draft.py  refine_golden_references.py  run_benchmark.py  run_probe.py
rag/: prompts.py  router.py
tests/: CLAUDE.md  test_e2e_coreference.py  test_e2e_verify_mem0_cache.py  test_embed_cache.py  test_eval_chunking.py  test_gemini_parse.py  test_generator.py  test_golden_set.py  test_mem0_manager.py  test_retrieval_rerank_k.py  test_v3_v4_parity.py  test_v4_graph.py  test_v4_history_node.py  test_v4_integration.py  test_v4_mem0_cache.py  test_v4_middleware.py  test_v4_observability.py  test_v4_pipeline_timing.py  test_v4_recursive_path.py  test_v4_router_node.py  test_v4_routing_matrix.py  test_v4_session.py  test_v4_state.py
(+799 files in other folders)
