[project]
name = "tamubot"
version = "0.1.0"
requires-python = ">=3.14"

[project.optional-dependencies]
v4 = [
    "langgraph>=1.1.2,<2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<4.0.0",
    "haystack-ai>=2.25.2,<3.0.0",
    "mem0ai",
]
spike = [
    "lightrag-hku",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tamubot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = [".", "src"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/tamubot/evals/*.py" = ["E402", "E501"]
"src/tamubot/ingestion/process_syllabi.py" = ["E501"]
"src/tamubot/ingestion/process_syllabi_v3.py" = ["E501"]
"src/tamubot/ingestion/legacy/standardize_syllabi.py" = ["E501"]
"src/tamubot/ingestion/test_gemini_parse.py" = ["E501"]
